// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<div
  className="diffStat"
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <strong
    className="text-success mr-1"
  >
    +
    1
  </strong>
  <strong
    className="text-warning mr-1"
  >
    •
    2
  </strong>
  <strong
    className="text-danger"
  >
    −
    3
  </strong>
</div>
`;

exports[`DiffStat standard 1`] = `
<div
  className="diffStat"
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <small>
    8
  </small>
</div>
`;

exports[`DiffStatSquares 1`] = `
<div
  className="squares"
>
  <div
    className="square bg-success"
  />
  <div
    className="square bg-warning"
  />
  <div
    className="square bg-danger"
  />
  <div
    className="square bg-danger"
  />
  <div
    className="square bg-danger"
  />
</div>
`;

exports[`DiffStatStack 1`] = `
<div
  className="d-flex flex-column align-items-center"
>
  <div
    className="diffStat pb-1"
    data-tooltip="1 addition, 2 changes, 3 deletions"
  >
    <strong
      className="text-success mr-1"
    >
      +
      1
    </strong>
    <strong
      className="text-warning mr-1"
    >
      •
      2
    </strong>
    <strong
      className="text-danger"
    >
      −
      3
    </strong>
  </div>
  <div
    className="squares"
  >
    <div
      className="square bg-success"
    />
    <div
      className="square bg-warning"
    />
    <div
      className="square bg-danger"
    />
    <div
      className="square bg-danger"
    />
    <div
      className="square bg-danger"
    />
  </div>
</div>
`;
